refactor: 스트림 변환 메서드 개선 (#20)